unreal-plugin/ThirdParty/AliceSDF/include/alice_sdf.h

/* ============================================================================
 * Types
 * ============================================================================ */

/**
 * @brief Opaque handle to an SDF node
 *
 * All SDF operations return handles that must be freed with alice_sdf_free().
 */
typedef void* SdfHandle;
/**
 * @brief Opaque handle to a pre-compiled SDF (bytecode)
 *
 * Compiled handles evaluate ~10x faster than raw SdfHandle.
 * Create once with alice_sdf_compile(), reuse every frame.
 */
typedef void* CompiledHandle;
/**
 * @brief Result codes for FFI operations
 */
typedef enum {
    SdfResult_Ok = 0,
    SdfResult_InvalidHandle = 1,
    SdfResult_NullPointer = 2,
    SdfResult_InvalidParameter = 3,
    SdfResult_OutOfMemory = 4,
    SdfResult_IoError = 5,
    SdfResult_CompileError = 6,
    SdfResult_Unknown = 99
} SdfResult;
/**
 * @brief Batch evaluation result
 */
typedef struct {
    uint32_t count;
    SdfResult result;
} BatchResult;
/**
 * @brief String result (for shader generation)
 *
 * The data pointer must be freed with alice_sdf_free_string().
 */
typedef struct {
    char* data;       /**< Null-terminated UTF-8 string (or NULL on error) */
    uint32_t len;     /**< Length in bytes (not including null terminator) */
    SdfResult result; /**< Result code */
} StringResult;
SdfHandle alice_sdf_repeat_finite(SdfHandle node, uint32_t cx, uint32_t cy, uint32_t cz, float sx, float sy, float sz);
SdfHandle alice_sdf_mirror(SdfHandle node, uint8_t mx, uint8_t my, uint8_t mz);
SdfHandle alice_sdf_elongate(SdfHandle node, float ex, float ey, float ez);
SdfHandle alice_sdf_revolution(SdfHandle node, float offset);
SdfHandle alice_sdf_extrude(SdfHandle node, float half_height);
SdfHandle alice_sdf_noise(SdfHandle node, float amplitude, float frequency, uint32_t seed);
SdfHandle alice_sdf_taper(SdfHandle node, float factor);
SdfHandle alice_sdf_displacement(SdfHandle node, float strength);
SdfHandle alice_sdf_polar_repeat(SdfHandle node, uint32_t count);
SdfHandle alice_sdf_octant_mirror(SdfHandle node);
SdfHandle alice_sdf_sweep_bezier(SdfHandle node, float p0x, float p0y, float p1x, float p1y, float p2x, float p2y);
SdfHandle alice_sdf_shear(SdfHandle node, float xy, float xz, float yz);
SdfHandle alice_sdf_animated(SdfHandle node, float speed, float amplitude);
SdfHandle alice_sdf_with_material(SdfHandle node, uint32_t material_id);
/* ============================================================================
 * Mesh Generation & Export
 * ============================================================================ */

typedef void* MeshHandle;
SdfResult alice_sdf_export_obj(MeshHandle mesh, SdfHandle node, const char* path, uint32_t resolution, float bounds);
SdfResult alice_sdf_export_glb(MeshHandle mesh, SdfHandle node, const char* path, uint32_t resolution, float bounds);
SdfResult alice_sdf_export_usda(MeshHandle mesh, SdfHandle node, const char* path, uint32_t resolution, float bounds);
SdfResult alice_sdf_export_fbx(MeshHandle mesh, SdfHandle node, const char* path, uint32_t resolution, float bounds);
/* ============================================================================
 * Compilation (Deep Fried)
 * ============================================================================ */

/**
 * @brief Compile an SDF to bytecode for fast evaluation
 *
 * Compilation is expensive (~0.1ms), but the resulting CompiledHandle
 * evaluates ~10x faster. Compile once at setup time, reuse every frame.
 *
 * @param node SDF handle to compile
 * @return Compiled handle (or COMPILED_HANDLE_NULL on failure)
 */
CompiledHandle alice_sdf_compile(SdfHandle node);
/**
 * @brief Free a compiled SDF handle
 */
void alice_sdf_free_compiled(CompiledHandle compiled);
/* ============================================================================
 * Evaluation
 * ============================================================================ */

/**
 * @brief Evaluate SDF at a single point
 * @return Signed distance (negative = inside, positive = outside)
 */
float alice_sdf_eval(SdfHandle node, float x, float y, float z);
/**
 * @brief Evaluate compiled SDF at a single point
 */
float alice_sdf_eval_compiled(CompiledHandle compiled, float x, float y, float z);
/**
 * @brief Evaluate SDF at multiple points (parallel, auto-compiles internally)
 * @param node SDF handle
 * @param points Array of floats [x0, y0, z0, x1, y1, z1, ...]
 * @param distances Output array (must be pre-allocated with count elements)
 * @param count Number of points
 */
BatchResult alice_sdf_eval_batch(SdfHandle node,
                                  const float* points,
                                  float* distances,
                                  uint32_t count);
/**
 * @brief Evaluate compiled SDF at multiple points (fastest AoS path)
 * @param compiled Pre-compiled SDF handle
 * @param points Array of floats [x0, y0, z0, x1, y1, z1, ...]
 * @param distances Output array (must be pre-allocated with count elements)
 * @param count Number of points
 */
BatchResult alice_sdf_eval_compiled_batch(CompiledHandle compiled,
                                           const float* points,
                                           float* distances,
                                           uint32_t count);
/* ============================================================================
 * Shader Generation
 * ============================================================================ */

/**
 * @brief Generate WGSL shader code
 * @note Requires 'gpu' feature
 */
StringResult alice_sdf_to_wgsl(SdfHandle node);
/**
 * @brief Generate HLSL shader code (for UE5/DirectX)
 * @note Requires 'hlsl' feature
 */
StringResult alice_sdf_to_hlsl(SdfHandle node);
/**
 * @brief Generate GLSL shader code (for Unity/OpenGL)
 * @note Requires 'glsl' feature
 */
StringResult alice_sdf_to_glsl(SdfHandle node);
/* ============================================================================
 * File I/O
 * ============================================================================ */

/**
 * @brief Save SDF to .asdf file
 * @param path File path (null-terminated UTF-8 string)
 */
SdfResult alice_sdf_save(SdfHandle node, const char* path);
/**
 * @brief Load SDF from .asdf file
 * @param path File path (null-terminated UTF-8 string)
 * @return Handle to loaded SDF (or SDF_HANDLE_NULL on error)
 */
SdfHandle alice_sdf_load(const char* path);
/* ============================================================================
 * Memory Management
 * ============================================================================ */

/** @brief Free an SDF handle */
void alice_sdf_free(SdfHandle node);
/** @brief Free a string returned by shader generation */
void alice_sdf_free_string(char* str);
/** @brief Clone an SDF handle */
SdfHandle alice_sdf_clone(SdfHandle node);
/* ============================================================================
 * Utilities
 * ============================================================================ */

/** @brief Get node count in an SDF tree */
uint32_t alice_sdf_node_count(SdfHandle node);
/** @brief Check if a handle is valid */
bool alice_sdf_is_valid(SdfHandle node);