unity-sdf-universe/Assets/Scripts/AliceSdf.cs


        public static IntPtr Shear(IntPtr node, float xy, float xz, float yz) => alice_sdf_shear(node, xy, xz, yz);
        public static IntPtr Animated(IntPtr node, float speed, float amplitude) => alice_sdf_animated(node, speed, amplitude);

        public static IntPtr RepeatFinite(IntPtr node, Vector3Int count, Vector3 spacing) =>
            alice_sdf_repeat_finite(node, (uint)count.x, (uint)count.y, (uint)count.z, spacing.x, spacing.y, spacing.z);
        public static IntPtr Mirror(IntPtr node, bool x, bool y, bool z) =>
            alice_sdf_mirror(node, (byte)(x ? 1 : 0), (byte)(y ? 1 : 0), (byte)(z ? 1 : 0));
        public static IntPtr Elongate(IntPtr node, Vector3 amount) =>
            alice_sdf_elongate(node, amount.x, amount.y, amount.z);
        public static IntPtr Revolution(IntPtr node, float offset) => alice_sdf_revolution(node, offset);
        public static IntPtr Extrude(IntPtr node, float halfHeight) => alice_sdf_extrude(node, halfHeight);
        public static IntPtr Noise(IntPtr node, float amplitude, float frequency, uint seed) => alice_sdf_noise(node, amplitude, frequency, seed);
        public static IntPtr Taper(IntPtr node, float factor) => alice_sdf_taper(node, factor);
        public static IntPtr Displacement(IntPtr node, float strength) => alice_sdf_displacement(node, strength);
        public static IntPtr PolarRepeat(IntPtr node, uint count) => alice_sdf_polar_repeat(node, count);
        public static IntPtr OctantMirror(IntPtr node) => alice_sdf_octant_mirror(node);
        public static IntPtr SweepBezier(IntPtr node, Vector2 p0, Vector2 p1, Vector2 p2) =>
            alice_sdf_sweep_bezier(node, p0.x, p0.y, p1.x, p1.y, p2.x, p2.y);
        public static IntPtr WithMaterial(IntPtr node, uint materialId) => alice_sdf_with_material(node, materialId);

        // ============================================================================
        // Compilation
        // ============================================================================

        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_compile(IntPtr node);
        [DllImport(LibraryName)] private static extern void alice_sdf_free_compiled(IntPtr compiled);
        [DllImport(LibraryName)] private static extern float alice_sdf_eval_compiled(IntPtr compiled, float x, float y, float z);
        [DllImport(LibraryName)] private static extern BatchResult alice_sdf_eval_compiled_batch(IntPtr compiled, [In] float[] points, [Out] float[] distances, uint count);

        /// <summary>Compile SDF to bytecode for fast evaluation</summary>
        public static IntPtr Compile(IntPtr node) => alice_sdf_compile(node);

        /// <summary>Free a compiled SDF handle</summary>
        public static void FreeCompiled(IntPtr compiled) => alice_sdf_free_compiled(compiled);

        /// <summary>Evaluate compiled SDF at a single point</summary>
        public static float EvalCompiled(IntPtr compiled, Vector3 point) =>
            alice_sdf_eval_compiled(compiled, point.x, point.y, point.z);

        /// <summary>Evaluate compiled SDF at multiple points (fastest AoS path)</summary>
        public static float[] EvalCompiledBatch(IntPtr compiled, Vector3[] points)
        {
            int count = points.Length;
            float[] pointsFlat = new float[count * 3];
            for (int i = 0; i < count; i++)
            {
                pointsFlat[i * 3 + 0] = points[i].x;
                pointsFlat[i * 3 + 1] = points[i].y;
                pointsFlat[i * 3 + 2] = points[i].z;
            }
            float[] distances = new float[count];
            var result = alice_sdf_eval_compiled_batch(compiled, pointsFlat, distances, (uint)count);
            if (result.Result != SdfResult.Ok)
            {
                Debug.LogError($"EvalCompiledBatch failed: {result.Result}");
                return null;
            }
            return distances;
        }

        // ============================================================================
        // Mesh Export
        // ============================================================================

        [DllImport(LibraryName)] private static extern SdfResult alice_sdf_export_obj(IntPtr mesh, IntPtr node, string path, uint resolution, float bounds);
        [DllImport(LibraryName)] private static extern SdfResult alice_sdf_export_glb(IntPtr mesh, IntPtr node, string path, uint resolution, float bounds);
        [DllImport(LibraryName)] private static extern SdfResult alice_sdf_export_usda(IntPtr mesh, IntPtr node, string path, uint resolution, float bounds);
        [DllImport(LibraryName)] private static extern SdfResult alice_sdf_export_fbx(IntPtr mesh, IntPtr node, string path, uint resolution, float bounds);

        public static bool ExportObj(IntPtr node, string path, uint resolution = 128, float bounds = 2f) =>
            alice_sdf_export_obj(IntPtr.Zero, node, path, resolution, bounds) == SdfResult.Ok;
        public static bool ExportGlb(IntPtr node, string path, uint resolution = 128, float bounds = 2f) =>
            alice_sdf_export_glb(IntPtr.Zero, node, path, resolution, bounds) == SdfResult.Ok;
        public static bool ExportUsda(IntPtr node, string path, uint resolution = 128, float bounds = 2f) =>
            alice_sdf_export_usda(IntPtr.Zero, node, path, resolution, bounds) == SdfResult.Ok;
        public static bool ExportFbx(IntPtr node, string path, uint resolution = 128, float bounds = 2f) =>
            alice_sdf_export_fbx(IntPtr.Zero, node, path, resolution, bounds) == SdfResult.Ok;

        // ============================================================================
        // Evaluation
        // ============================================================================

        [DllImport(LibraryName)]
        private static extern float alice_sdf_eval(IntPtr node, float x, float y, float z);

        [DllImport(LibraryName)]
        private static extern BatchResult alice_sdf_eval_batch(IntPtr node,
                                                                [In] float[] points,
                                                                [Out] float[] distances,
                                                                uint count);

        /// <summary>Evaluate SDF at a single point</summary>
        public static float Eval(IntPtr node, Vector3 point) =>
            alice_sdf_eval(node, point.x, point.y, point.z);

        /// <summary>Evaluate SDF at multiple points (parallel)</summary>
        public static float[] EvalBatch(IntPtr node, Vector3[] points)
        {
            int count = points.Length;
            float[] pointsFlat = new float[count * 3];
            for (int i = 0; i < count; i++)
            {
                pointsFlat[i * 3 + 0] = points[i].x;
                pointsFlat[i * 3 + 1] = points[i].y;
                pointsFlat[i * 3 + 2] = points[i].z;
            }

            float[] distances = new float[count];
            var result = alice_sdf_eval_batch(node, pointsFlat, distances, (uint)count);

            if (result.Result != SdfResult.Ok)
            {
                Debug.LogError($"EvalBatch failed: {result.Result}");
                return null;
            }

            return distances;
        }

        // ============================================================================
        // Shader Generation
        // ============================================================================

        [DllImport(LibraryName)]
        private static extern StringResult alice_sdf_to_wgsl(IntPtr node);

        [DllImport(LibraryName)]
        private static extern StringResult alice_sdf_to_hlsl(IntPtr node);

        [DllImport(LibraryName)]
        private static extern StringResult alice_sdf_to_glsl(IntPtr node);

        /// <summary>Generate WGSL shader code</summary>
        public static string ToWgsl(IntPtr node)
        {
            var result = alice_sdf_to_wgsl(node);
            if (result.Result != SdfResult.Ok || result.Data == IntPtr.Zero) return null;
            string shader = Marshal.PtrToStringAnsi(result.Data);
            alice_sdf_free_string(result.Data);
            return shader;
        }

        /// <summary>Generate HLSL shader code (for UE5/DirectX)</summary>
        public static string ToHlsl(IntPtr node)
        {
            var result = alice_sdf_to_hlsl(node);
            if (result.Result != SdfResult.Ok || result.Data == IntPtr.Zero) return null;
            string shader = Marshal.PtrToStringAnsi(result.Data);
            alice_sdf_free_string(result.Data);
            return shader;
        }

        /// <summary>Generate GLSL shader code (for Unity/OpenGL)</summary>
        public static string ToGlsl(IntPtr node)
        {
            var result = alice_sdf_to_glsl(node);
            if (result.Result != SdfResult.Ok || result.Data == IntPtr.Zero) return null;
            string shader = Marshal.PtrToStringAnsi(result.Data);
            alice_sdf_free_string(result.Data);
            return shader;
        }

        // ============================================================================
        // File I/O
        // ============================================================================

        [DllImport(LibraryName)]
        private static extern SdfResult alice_sdf_save(IntPtr node, string path);

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_load(string path);

        /// <summary>Save SDF to .asdf file</summary>
        public static bool Save(IntPtr node, string path) =>
            alice_sdf_save(node, path) == SdfResult.Ok;

        /// <summary>Load SDF from .asdf file</summary>
        public static IntPtr Load(string path) => alice_sdf_load(path);

        // ============================================================================
        // Memory Management
        // ============================================================================

        [DllImport(LibraryName)]
        private static extern void alice_sdf_free(IntPtr node);

        [DllImport(LibraryName)]
        private static extern void alice_sdf_free_string(IntPtr str);

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_clone(IntPtr node);

        /// <summary>Free an SDF handle</summary>
        public static void Free(IntPtr node) => alice_sdf_free(node);

        /// <summary>Clone an SDF handle</summary>
        public static IntPtr Clone(IntPtr node) => alice_sdf_clone(node);

        // ============================================================================
        // Utilities
        // ============================================================================

        [DllImport(LibraryName)]
        private static extern uint alice_sdf_node_count(IntPtr node);

        [DllImport(LibraryName)]
        private static extern bool alice_sdf_is_valid(IntPtr node);

        /// <summary>Get node count in an SDF tree</summary>
        public static uint NodeCount(IntPtr node) => alice_sdf_node_count(node);

        /// <summary>Check if a handle is valid</summary>
        public static bool IsValid(IntPtr node) => alice_sdf_is_valid(node);
    }
}
